<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/in_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:autofillHints="username"
        android:inputType="text"
        android:hint="@string/username_placeholder"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:maxLines="1"
        android:layout_margin="16dp"
        android:background="@drawable/edittext_bg"
        android:gravity="center_vertical"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        android:imeOptions="actionNext"
        />

    <EditText
        android:id="@+id/in_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@+id/in_user"
        android:background="@drawable/edittext_bg"
        android:minHeight="48dp"
        android:hint="@string/password_placeholder"
        android:maxLines="1"
        android:autofillHints="password"
        android:textSize="18sp"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:imeOptions="actionDone"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_register"
        app:layout_constraintTop_toBottomOf="@+id/in_password"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintWidth_default="spread"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="30dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        app:layout_constraintStart_toEndOf="@+id/btn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/in_password"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintWidth_default="spread"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp" />

    <TextView
        android:id="@+id/change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change"
        app:layout_constraintTop_toBottomOf="@id/in_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="100dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/change"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_en"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/en"
        app:layout_constraintStart_toEndOf="@id/btn_cn"
        app:layout_constraintEnd_toStartOf="@+id/btn_ja"
        app:layout_constraintTop_toBottomOf="@id/change"
        android:layout_marginTop="20dp"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_ja"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ja"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/change"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>